--- a/it/index.html
+++ b/it/index.html
@@ -66,168 +66,83 @@
 <!--0-->
   <section class="accueil">
     <div class="slider" id="slider1">
-      <div class="slides">
-        <div class="slide">
-          <img src="../library/home/pan-home-vicenza-2.jpg" alt="Parco della Pace - Vicenza">
-            <div class="overlay">
-                <div class="quote">
-                  <p>Parco della Pace - Vicenza</p>
-                  <a class="color-reversed-link" href="404">Scopri di <span>+</span></a>
-                </div>
-            </div>
-        </div>
-        <div class="slide">
-            <img src="../library/home/pan-home-castellaneta-marina.jpg" alt="Castellaneta Marina">
-            <div class="overlay">
-                <div class="quote">
-                  <p>Castellaneta Marina</p>
-                  <a class="color-reversed-link" href="404">Scopri di <span>+</span></a>
-                </div>
-            </div>
-        </div>
-        <div class="slide">
-            <img src="../library/home/pan-home-expo-milano-2.jpg" alt="Expo 2015 - Milano">
-            <div class="overlay">
-                <div class="quote">
-                  <p>Expo 2015 - Milano</p>
-                  <a class="color-reversed-link" href="404">Scopri di <span>+</span></a>
-                </div>
-            </div>
-        </div>
-        <div class="slide">
-            <img src="../library/home/pan-home-gran-paradiso.jpg" alt="Parco Nazionale Gran Paradiso">
-            <div class="overlay">
-                <div class="quote">
-                  <p>Parco Nazionale Gran Paradiso</p>
-                  <a class="color-reversed-link" href="404">Scopri di <span>+</span></a>
-                </div>
-            </div>
-        </div>
-        <div class="slide">
-            <img src="../library/home/pan-home-pellegrino.jpg" alt="Grand Hotel di San Pellegrino Terme">
-            <div class="overlay">
-                <div class="quote">
-                  <p>Grand Hotel di San Pellegrino Terme</p>
-                  <a class="color-reversed-link" href="404">Scopri di <span>+</span></a>
-                </div>
-            </div>
-        </div>
-        <div class="slide">
-            <img src="../library/home/pan-home-expo-milano-3.jpg" alt="Expo 2015 - Milano">
-            <div class="overlay">
-                <div class="quote">
-                  <p>Expo 2015 - Milano</p>
-                  <a class="color-reversed-link" href="404">Scopri di <span>+</span></a>
-                </div>
-            </div>
-        </div>
-      </div>
-      <div class="scroll">&darr;</div>
+    <div class="slides">
+        <a class="thumb slide" href="parco-della-pace"><p class="cache" style="height: 100%; font-size: 55px;">Il parco della Pace</p>
+          <img src="../library/progetti/parco-della-pace/pdp-7.JPG" alt="Parco della Pace - Vicenza"></a>
+        <a class="thumb slide" href="parco-della-pace"><p class="cache" style="height: 100%; font-size: 55px;">Castellaneta Marina</p>
+          <img src="../library/home/pan-home-castellaneta-marina.jpg" alt="Castellaneta Marina"></a>
+        <a class="thumb slide" href="parco-della-pace"><p class="cache" style="height: 100%; font-size: 55px;">Expo 2015 - Milano</p>
+          <img src="../library/home/pan-home-expo-milano-2.jpg" alt="Expo 2015 - Milano"></a>
+        <a class="thumb slide" href="parco-della-pace"><p class="cache" style="height: 100%; font-size: 55px;">Parco Nazionale Gran Paradiso</p>
+          <img src="../library/home/pan-home-gran-paradiso.jpg" alt="Parco Nazionale Gran Paradiso"></a>
+        <a class="thumb slide" href="parco-della-pace"><p class="cache" style="height: 100%; font-size: 55px;">Grand Hotel di San Pellegrino Terme</p>
+          <img src="../library/home/pan-home-pellegrino.jpg" alt="Grand Hotel di San Pellegrino Terme"></a>
+        <a class="thumb slide" href="parco-della-pace"><p class="cache" style="height: 100%; font-size: 55px;">Expo 2015 - Milano</p>
+          <img src="../library/home/pan-home-expo-milano-3.jpg" alt="Expo 2015 - Milano"></a>
+    </div>
+    <div class="scroll">&darr;</div>
     </div>
   </section>
 <!--1-->
   <section class="split" id="responsive-reverse">
     <div>
-      <img src="../library/home/pan-home-chisiamo.jpg">
+      <img src="../library/home/pan-home-chisiamo.jpg" style="height: 75vh;" alt="Expo 2015 - Milano">
     </div>
-    <div>
-      <h1>Chi siamo</h1>
-      <h2>Progetazzione<br>Architettura +<br>Natura</h2>
-      <p>PAN associati S.R.L. è una società fondata nel 2001 costituita da un gruppo multidisciplinare di professionisti che operano nei campi della progettazione architettonica e del paesaggio, fino alla pianificazione territoriale.</p>
-      <p>La nostra missione è rivitalizzare spazi degradati, convertendoli in aree vivibili e sostenibili che siano di valore per le comunità locali.</p>
-      <p>Vediamo in questi spazi un'opportunità per migliorare la vita urbana, creare nuovi habitat ed ecosistemi, favorire la biodiversità, e apportare benefici ecologici attraverso infrastrutture che offrano servizi ecosistemici. Ci impegniamo nella lotta contro i cambiamenti climatici adottando strategie di progettazione ispirate alle soluzioni basate sulla natura (Nature Based Solutions, NBS).</p>
-      <div class="box">
-        <a class="classic-link" href="404">Scopri di <span>+</span></a>
+    <div class="right">
+      <div>
+        <h2>PAN associati</h2>
+        <p>Siamo una società fondata nel 2001 costituita da un gruppo multidisciplinare di professionisti che operano nei campi della progettazione architettonica e del paesaggio, fino alla pianificazione territoriale.</p>
+        <p>La nostra missione è rivitalizzare spazi degradati, convertendoli in aree vivibili e sostenibili che siano di valore per le comunità locali.</p>
+        <p>Vediamo in questi spazi un'opportunità per migliorare la vita urbana, creare nuovi habitat ed ecosistemi, favorire la biodiversità, e apportare benefici ecologici attraverso infrastrutture che offrano servizi ecosistemici. Ci impegniamo nella lotta contro i cambiamenti climatici adottando strategie di progettazione ispirate alle soluzioni basate sulla natura (Nature Based Solutions, NBS).</p>
+        <div class="box"><a class="classic-link" href="404"><span>+</span>Scopri di più</a></div>
       </div>
     </div>
   </section>
 <!--#2-->
-  <section class="split">
-    <div>
-      <h1>Cosa facciamo</h1>
-      <h2>Le nostre aree di competenza</h2>
+  <section class="centered">
+      <h2>Aree di competenza</h2>
       <p>Attraverso un approccio multidisciplinare, la nostra attività si estende sia al settore pubblico che a quello privato, offrendo una gamma di servizi che copre tutte le fasi della progettazione, direzione lavori e coordinamento della sicurezza, sia durante la fase di progettazione che di esecuzione.</p>
-      <p>Offriamo inoltre consulenze specialistiche nel settore ambientale e paesaggistico, tra cui studi di fattibilità, analisi agronomiche, botaniche e forestali, analisi e studi urbanistici, verifiche e studi ambientali per l’autorizzazione di piani e progetti.
-      <p>Nel nostro processo creativo, prestiamo attenzione a ogni aspetto dell'ecosistema locale, mirando a sviluppare paesaggi funzionali e resilienti.</p>
-      <div class="box">
-        <a class="classic-link" href="404">Scopri di <span>+</span></a>
-      </div>
-    </div>
-    <div class="slider" id="slider2">
-      <div class="slides">
-        <div class="slide">
-          <img src="../library/home/pan-home-rigenerazione.jpg" alt="Rigenerazione spazi urbani">
-            <div class="overlay">
-                <div class="quote">
-                  <p>Rigenerazione spazi urbani</p>
-                  <a class="color-reversed-link" href="404">Scopri di <span>+</span></a>
-                </div>
-            </div>
-        </div>
-        <div class="slide">
-            <img src="../library/home/pan-home-parchi.jpg" alt="Parchi e giardini">
-            <div class="overlay">
-                <div class="quote">
-                  <p>Parchi e giardini</p>
-                  <a class="color-reversed-link" href="404">Scopri di <span>+</span></a>
-                </div>
-            </div>
-        </div>
-        <div class="slide">
-            <img src="../library/home/pan-home-riqualificazione.jpg" alt="Riqualificazione ambientale e paesaggistica">
-            <div class="overlay">
-                <div class="quote">
-                  <p>Riqualificazione ambientale e paesaggistica</p>
-                  <a class="color-reversed-link" href="404">Scopri di <span>+</span></a>
-                </div>
-            </div>
-        </div>
-        <div class="slide">
-            <img src="../library/home/pan-home-progettazione.jpg" alt="Inserimento ambientale di infrastrutture">
-            <div class="overlay">
-                <div class="quote">
-                  <p>Inserimento ambientale di infrastrutture</p>
-                  <a class="color-reversed-link" href="404">Scopri di <span>+</span></a>
-                </div>
-            </div>
-        </div>
-        <div class="slide">
-            <img src="../library/home/pan-home-architettura.jpg" alt="Architettura">
-            <div class="overlay">
-                <div class="quote">
-                  <p>Architettura</p>
-                  <a class="color-reversed-link" href="404">Scopri di <span>+</span></a>
-                </div>
-            </div>
-        </div>
-      </div>
-    </div>
+
+        <a class="news-link" href="404">
+          <h3>Consulenza ambientale e paesaggistica</h3></a>
+        <a class="news-link" href="404">
+          <h3>Studi di fattibilità</h3></a>
+        <a class="news-link" href="404">
+          <h3>Analisi agronomiche</h3></a>
+        <a class="news-link" href="404">
+          <h3>Botaniche e forestali</h3></a>
+        <a class="news-link" href="404">
+          <h3>Analisi e studi urbanistici</h3></a>
+        <a class="news-link" href="404">
+          <h3>Progettazione e direzione lavori</h3></a>
+        <a class="news-link" href="404">
+          <h3>Verifiche e studi ambientali</h3></a>
   </section>
 <!--#3-->
-  <section class="split" id="responsive-reverse">
-    <div>
-      <img src="../library/home/pan-home-lavoraconnoi.jpg">
+  <section class="split">
+    <div class="left">
+      <div>
+        <h2>Lavora con noi</h2>
+        <p>Lo studio PAN è sempre alla ricerca di nuove figure brillanti e appassionate pronte a esplorare nuovi orizzonti e che possano arricchire il nostro team di professionisti per una collaborazione stimolante e a lungo termine.</p>
+        <p>Sei motivato a dare forma al futuro attraverso la progettazione innovativa e sostenibile del paesaggio?</p>
+        <p>Scopri come la tua visione può contribuire a plasmare ambienti memorabili e unisciti a noi in questa entusiasmante avventura. Visita la nostra sezione 'Lavora con noi' per saperne di più e inviaci la tua candidatura.</p>
+        <div class="box"><a class="classic-link" href="404"><span>+</span>Scopri di più</a></div>
+      </div>
     </div>
     <div>
-      <h1>Collaborazioni</h1>
-      <h2>Hai qualcosa in più?<br>Lavora con noi!</h2>
-      <p>Lo studio PAN è sempre alla ricerca di nuove figure brillanti e appassionate pronte a esplorare nuovi orizzonti e che possano arricchire il nostro team di professionisti per una collaborazione stimolante e a lungo termine.</p>
-      <p>Sei motivato a dare forma al futuro attraverso la progettazione innovativa e sostenibile del paesaggio?</p>
-      <p>Scopri come la tua visione può contribuire a plasmare ambienti memorabili e unisciti a noi in questa entusiasmante avventura. Visita la nostra sezione 'Lavora con noi' per saperne di più e inviaci la tua candidatura.</p>
-      <div class="box">
-        <a class="classic-link" href="404">Scopri di <span>+</span></a>
-      </div>
+      <img src="../library/home/pan-home-lavoraconnoi.jpg" style="height: 75vh;" alt="Expo 2015 - Milano">
     </div>
   </section>
-<!--
-  <section class="footer-prev">
+<!--4-->
+  <section class="centered">
     <h2>News</h2>
-      <div class="module">
-        <a class="hermit-link" href="404"><h1>Pubblicazione</h1><h3>Top Scape Paysage n° 53</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent bibendum aliquet tempus.</p></a>
-        <a class="hermit-link" href="404"><h1>Pubblicazione</h1><h3>Rivista Industria delle costruzioni n°493</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent bibendum aliquet tempus.</p></a>
-        <a class="hermit-link" href="404"><h1>Pubblicazione</h1><h3>Top Scape Paysage n° 46</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent bibendum aliquet tempus.</p></a>
-      </div>
-  </section>-->
+        <a class="news-link" href="404">
+          <h3>Pubblicazione : Top Scape Paysage n° 53</h3></a>
+        <a class="news-link" href="404">
+          <h3>Pubblicazione : Rivista Industria delle costruzioni n°493</h3></a>
+        <a class="news-link" href="404">
+          <h3>Pubblicazione :Top Scape Paysage n° 46</h3></a>
+  </section>
 </main>
 
 <footer>
