--- a/it/progetti/index.html
+++ b/it/progetti/index.html
@@ -66,7 +66,7 @@
 <!--#0-->
 
 <!--#1-->
-  <section class="centered">
+  <section class="menu">
     <button class="show-all-btn showSectionButton">Tutti i progetti</button>
     <button class="filter-btn showSectionButton" data-filter="section1">Rigenerazione spazi urbani</button>
     <button class="filter-btn showSectionButton" data-filter="section2">Parchi e giardini</button>
@@ -80,73 +80,73 @@
   <section class="thumbnail news-section section1"><a class="thumb" href="parco-della-pace">
     <p class="cache">+</p>
     <img src="../../library/progetti/parco-della-pace/pdp-17.JPG" alt="Parco della Pace - Vicenza">
-    <p>Parco della Pace - Vicenza</p><p class="quote">2024</p>
+    <p>Parco della Pace</p><p class="quote">2024</p>
   </a></section>
 <!--#2-->
   <section class="thumbnail news-section section1"><a class="thumb" href="parco-della-pace">
     <p class="cache">+</p>
     <img src="../../library/progetti/parco-della-pace/pdp-18.JPG" alt="Parco della Pace - Vicenza">
-    <p>Parco della Pace - Vicenza</p><p class="quote">2024</p>
+    <p>Parco della Pace</p><p class="quote">2024</p>
   </a></section>
 <!--#3-->
   <section class="thumbnail news-section section2"><a class="thumb" href="parco-della-pace">
     <p class="cache">+</p>
     <img src="../../library/progetti/parco-della-pace/pdp-19.jpg" alt="Parco della Pace - Vicenza">
-    <p>Parco della Pace - Vicenza</p><p class="quote">2024</p>
+    <p>Parco della Pace</p><p class="quote">2024</p>
   </a></section>
 <!--#4-->
   <section class="thumbnail news-section section3"><a class="thumb" href="parco-della-pace">
     <p class="cache">+</p>
     <img src="../../library/progetti/parco-della-pace/pdp-20.jpg" alt="Parco della Pace - Vicenza">
-    <p>Parco della Pace - Vicenza</p><p class="quote">2024</p>
+    <p>Parco della Pace</p><p class="quote">2024</p>
   </a></section>
 <!--#5-->
   <section class="thumbnail news-section section4"><a class="thumb" href="parco-della-pace">
     <p class="cache">+</p>
     <img src="../../library/progetti/parco-della-pace/pdp-21.jpg" alt="Parco della Pace - Vicenza">
-    <p>Parco della Pace - Vicenza</p><p class="quote">2024</p>
+    <p>Parco della Pace</p><p class="quote">2024</p>
   </a></section>
 <!--#6-->
   <section class="thumbnail news-section section5"><a class="thumb" href="parco-della-pace">
     <p class="cache">+</p>
     <img src="../../library/progetti/parco-della-pace/pdp-22.jpg" alt="Parco della Pace - Vicenza">
-    <p>Parco della Pace - Vicenza</p><p class="quote">2024</p>
+    <p>Parco della Pace</p><p class="quote">2024</p>
   </a></section>
 <!--#7-->
   <section class="thumbnail news-section section1"><a class="thumb" href="parco-della-pace">
     <p class="cache">+</p>
     <img src="../../library/progetti/parco-della-pace/pdp-1.jpg" alt="Parco della Pace - Vicenza">
-    <p>Parco della Pace - Vicenza</p><p class="quote">2024</p>
+    <p>Parco della Pace</p><p class="quote">2024</p>
   </a></section>
 <!--#8-->
   <section class="thumbnail news-section section1"><a class="thumb" href="parco-della-pace">
     <p class="cache">+</p>
     <img src="../../library/progetti/parco-della-pace/pdp-8.jpg" alt="Parco della Pace - Vicenza">
-    <p>Parco della Pace - Vicenza</p><p class="quote">2024</p>
+    <p>Parco della Pace</p><p class="quote">2024</p>
   </a></section>
 <!--#9-->
   <section class="thumbnail news-section section2"><a class="thumb" href="parco-della-pace">
     <p class="cache">+</p>
     <img src="../../library/progetti/parco-della-pace/pdp-9.jpg" alt="Parco della Pace - Vicenza">
-    <p>Parco della Pace - Vicenza</p><p class="quote">2024</p>
+    <p>Parco della Pace</p><p class="quote">2024</p>
   </a></section>
 <!--#10-->
   <section class="thumbnail news-section section3"><a class="thumb" href="parco-della-pace">
     <p class="cache">+</p>
     <img src="../../library/progetti/parco-della-pace/pdp-10.jpg" alt="Parco della Pace - Vicenza">
-    <p>Parco della Pace - Vicenza</p><p class="quote">2024</p>
+    <p>Parco della Pace</p><p class="quote">2024</p>
   </a></section>
 <!--#11-->
   <section class="thumbnail news-section section4"><a class="thumb" href="parco-della-pace">
     <p class="cache">+</p>
     <img src="../../library/progetti/parco-della-pace/pdp-11.jpg" alt="Parco della Pace - Vicenza">
-    <p>Parco della Pace - Vicenza</p><p class="quote">2024</p>
+    <p>Parco della Pace</p><p class="quote">2024</p>
   </a></section>
 <!--#12-->
   <section class="thumbnail news-section section5"><a class="thumb" href="parco-della-pace">
     <p class="cache">+</p>
     <img src="../../library/progetti/parco-della-pace/pdp-12.jpg" alt="Parco della Pace - Vicenza">
-    <p>Parco della Pace - Vicenza</p><p class="quote">2024</p>
+    <p>Parco della Pace</p><p class="quote">2024</p>
   </a></section>
 </div>
 </main>
