--- a/it/studio.html
+++ b/it/studio.html
@@ -66,7 +66,7 @@
 <!--#0-->
 
 <!--#1-->
-  <section class="centered">
+  <section class="menu">
     <button class="filter-btn showSectionButton" data-filter="section1">Chi siamo</button>
     <button class="filter-btn showSectionButton" data-filter="section2">Team</button>
     <button class="filter-btn showSectionButton" data-filter="section3">Lavora con noi</button>
@@ -227,7 +227,6 @@
         <button class="divtoggler" onclick="toggleDiv('div2')">Toggle Div 2</button>
       </div>
       <div class="toggle-div" id="div1">
-        <h3>Architetto del paesaggio</h3>
         <h1>Responsabilità</h1>
         <ul class="list">
         <li>Partecipazione attiva a tutte le fasi del processo di progettazione.</li>
