--- a/it/news.html
+++ b/it/news.html
@@ -66,7 +66,7 @@
 <!--#0-->
 
 <!--#1-->
-  <section class="centered">
+  <section class="menu">
     <button class="show-all-btn showSectionButton">Tutte le news</button>
     <button class="filter-btn showSectionButton" data-filter="section1">Eventi</button>
     <button class="filter-btn showSectionButton" data-filter="section2">Pubblicazioni</button>
