--- a/it/progetti/parco-della-pace.html
+++ b/it/progetti/parco-della-pace.html
@@ -93,18 +93,33 @@
         <li><b>Partners</b><br>ITS Engineering S.r.l., EMF Estudi Marti Franch, Franco Zagari, Geol. Gino Lucchetta, Aspro Studio</li>
         <li><b>Team</b><br>Gaetano Selleri, Benedetto Selleri, Lorenzo Baldini, Sara Vergani, Sara Valassina</li>
         <li><b>Importo lavori</b><br>9.700.000 eur</li>
-        <li><b>Dati chiave</b><br>9km di canali, 52.000 mq di laghi, 70.000 mq di aree umide allagabili,  nuovi boschi grazie ad interventi di forestazione urbana (58.000 mq di boschi igrofili e 67.000 boschi mesofili), vaste praterie (360.000mq prati suddivisi in: prati alti e fioriti, prati rasati, prati umidi eseguiti con specie acquatiche e igrofile locali anche rare, e un grande “prato selvaggio), messa a dimora di 8.600 piantine forestali (alberi e arbusti), e 1.400 piante sviluppate per filari regolari e irregolari</li>
       </ul>
     </div>
   </section>
 <!--#3-->  
-  <section class="mosaic" style="margin-bottom: 100px;">
-      <img src="../../library/progetti/parco-della-pace/pdp-1.jpg" alt="Parco della Pace - Vicenza" style="grid-column: span 2;">
-      <img src="../../library/progetti/parco-della-pace/pdp-2.jpg" alt="Parco della Pace - Vicenza" style="grid-column: span 2;">
-      <img src="../../library/progetti/parco-della-pace/pdp-3.jpg" alt="Parco della Pace - Vicenza" style="grid-column: span 2;">
-      <img src="../../library/progetti/parco-della-pace/pdp-4.jpg" alt="Parco della Pace - Vicenza" style="grid-column: span 6;">
-      <img src="../../library/progetti/parco-della-pace/pdp-5.jpg" alt="Parco della Pace - Vicenza"style="grid-column: span 3;">
+  <section class="mosaic">
+      <img src="../../library/progetti/parco-della-pace/pdp-20.jpg" alt="Parco della Pace - Vicenza" style="grid-column: 2 / span 3;">
+      <img src="../../library/progetti/parco-della-pace/pdp-22.jpg" alt="Parco della Pace - Vicenza" style="grid-column: 5 / span 2;">
+      <img src="../../library/progetti/parco-della-pace/pdp-10.jpg" alt="Parco della Pace - Vicenza" style="grid-column: span 6;">
+      <img src="../../library/progetti/parco-della-pace/pdp-4.jpg" alt="Parco della Pace - Vicenza" style="grid-column: 1 / span 2;">
+      <img src="../../library/progetti/parco-della-pace/pdp-5.jpg" alt="Parco della Pace - Vicenza"style="grid-column: 3 / span 4;">
       <img src="../../library/progetti/parco-della-pace/pdp-7.jpg" alt="Parco della Pace - Vicenza" style="grid-column: span 3;">
+  </section>
+<!--#4--> 
+  <section class="duo" style="margin-bottom: 100px;">
+    <div>
+    </div>
+    <div>
+      <h3>Dati chiave</h3>
+      <ul class="cartouche">
+        <li><b>Canali</b><br>9 km</li>
+        <li><b>Laghi</b><br>52.000 mq</li>
+        <li><b>Aree umide allagabili</b><br>70.000 mq</li>
+        <li><b>Nuovi boschi</b><br>Grazie ad interventi di forestazione urbana (58.000 mq di boschi igrofili e 67.000 boschi mesofili)</li>
+        <li><b>Vaste praterie</b><br>360.000mq prati suddivisi in: prati alti e fioriti, prati rasati, prati umidi eseguiti con specie acquatiche e igrofile locali anche rare, e un grande “prato selvaggio)</li>
+        <li><b>Messa a dimora</b><br>8.600 piantine forestali (alberi e arbusti), e 1.400 piante sviluppate per filari regolari e irregolari</li>
+      </ul>
+    </div>
   </section>
 </main>
 
